--- a/public/index.html
+++ b/public/index.html
@@ -6,11 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
-      name="Dia dos Namorados | Museu Santo António"
+      name="O Dia dos Namorados | Museu Santo António"
       content="O Dia dos Namorados é no Museu de Santo António"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-E846ESY3GR"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-E846ESY3GR');
+    </script>
     <title>Museu Santo António | Valentines</title>
   </head>
   <body style="background-color: #F0BECE;">
