--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
 
       gtag('config', 'G-E846ESY3GR');
     </script>
-    <title>Museu Santo António | Valentines</title>
+    <title>O dia dos namorados é no Santo António | Museu de Lisboa Santo António</title>
   </head>
   <body style="background-color: #F0BECE;">
     <noscript>You need to enable JavaScript to run this app.</noscript>
